--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,28 @@
-/*  your css code here. If applicable */
-p{
-	color: white;
-	background-color : black;
+:root{
+	 background-color: rgb(135, 206, 235);
+}
+article p:first-child{
+	background-color:black;
+	color:white;
+}
+article p:nth-child(2){
+	
+}
+article p:last-child{
+	color:red;
+}
+ul li{
+	background-color:gray;
+	width:50%;
+	padding:10px;
+}
+ul li:first-child,ul li:last-child{
+	font-size:22px;
+}
+
+ul li:nth-child(odd){
+	background-color:white;
+}
+ul li:nth-child(3){
+	background-color:pink;
 }
